<resources>
    <string name="app_name">newsletter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="science">science</string>
    <string name="technology">technology</string>
    <string name="health">health</string>
    <string name="entertainment">entertainment</string>
    <string name="sports">sports</string>
    <string name="business">business</string>
    <string name="general">general</string>
</resources>