<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"

        tools:context=".MainActivity">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/general"
            android:tag="general"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:text="@string/general"
            android:onClick="handleCategoryClick"
            app:layout_constraintHeight_percent="0.33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.33"
            android:textAppearance="?attr/textAppearanceListItem" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/business"
            android:tag="business"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:onClick="handleCategoryClick"
            android:text="@string/business"
            android:layout_margin="2dp"
            app:layout_constraintHeight_percent="0.33"
            app:layout_constraintStart_toEndOf="@id/general"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.33"
            android:textAppearance="?attr/textAppearanceListItem" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sports"
            android:tag="sports"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:onClick="handleCategoryClick"
            android:text="@string/sports"
            app:layout_constraintHeight_percent="0.33"
            app:layout_constraintStart_toEndOf="@id/business"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.33"
            android:textAppearance="?attr/textAppearanceListItem" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/entertainment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_marginStart="8dp"
            android:onClick="handleCategoryClick"
            android:layout_marginLeft="8dp"
            android:textSize="14sp"
            android:tag="entertainment"
            android:text="@string/entertainment"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintHeight_percent="0.33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/general"
            app:layout_constraintWidth_percent="0.33" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/health"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:tag="health"
            android:onClick="handleCategoryClick"
            android:text="@string/health"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintHeight_percent="0.33"
            app:layout_constraintStart_toEndOf="@id/entertainment"
            app:layout_constraintTop_toBottomOf="@id/business"
            app:layout_constraintWidth_percent="0.33" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/science"
            android:tag="science"
            android:onClick="handleCategoryClick"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/science"
            android:layout_margin="2dp"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintStart_toEndOf="@id/health"
            app:layout_constraintTop_toBottomOf="@id/sports"
            app:layout_constraintHeight_percent="0.33"
            app:layout_constraintWidth_percent="0.33"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/technology"
            android:tag="technology"
            android:onClick="handleCategoryClick"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/technology"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintStart_toStartOf="@+id/health"
            app:layout_constraintTop_toBottomOf="@id/health"
            app:layout_constraintHeight_percent="0.33"
            app:layout_constraintWidth_percent="0.33"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>